# godspeed-os

./: .gitattributes  .gitignore  CLAUDE.md  COMMANDMENTS.md  CONTRIBUTING.md  Cargo.toml  GETTING_STARTED.md  GLOSSARY.md  LICENSE  NOTICE  README.md  limine.conf  rust-toolchain.toml  tftp64_setup.txt
.cargo/: config.toml
.github/workflows/: build.yml  coverage.yml  fuzz.yml  identity.yml  mutation.yml  pages.yml
audit-report/: 2026-07-15.md
bugs/: 1_CROSS_CORE_IPC_REPLY_TO_BSP_STALLS.md  1_FINDINGS_AP_TO_BSP_IPI.md  2_INTERMITTENT_RIP0_PF_POST_IDLE.md  3_DWC2_SPLIT_XACTERR_LOWSPEED_KBD.md
contracts/: CLAUDE.md
contracts/schema/: service.schema.json
docs/: CLAUDE.md  aarch64.md  ahci.md  anti-patterns.md  arm32-status.md  cluster-design.md  console-service.md  documentation-audit.md  drives.md  hw-bare-metal-freeze-j5005.md  introspection-capability.md  iommu.md  kernel-audit.md  licensing.md  multi-arch.md  naming-design.md  networking.md  persistence.md  pipes.md  power.md  prime.md  records.md  registry.md  scripting.md  security-audit.md  service-control-cap.md  unsafe-audit.md  usb-hub.md  userspace-audit.md  verification-road-map.md
editors/gsh-vscode/: README.md  language-configuration.json  package.json
examples/: README.md
examples/.cargo/: config.toml
examples/00-hello/: CLAUDE.md  Cargo.toml  build.rs
examples/asker/: CLAUDE.md  Cargo.toml  build.rs
examples/cap-grant/: CLAUDE.md  Cargo.toml  build.rs
examples/counter/: CLAUDE.md  Cargo.toml  build.rs
examples/driver-skeleton/: CLAUDE.md  Cargo.toml  build.rs
examples/driver-skeleton/contracts/: driver-skeleton.toml
examples/driver-skeleton/src/: main.rs
examples/e1000/: CLAUDE.md  Cargo.toml  build.rs
examples/greet/: CLAUDE.md  Cargo.toml  build.rs
examples/holder/: CLAUDE.md  Cargo.toml  build.rs
examples/ping/: CLAUDE.md  Cargo.toml  build.rs
examples/pong/: CLAUDE.md  Cargo.toml  build.rs
examples/reply-server/: CLAUDE.md  Cargo.toml  build.rs
examples/resource-server/: CLAUDE.md  Cargo.toml  build.rs
examples/roster/: CLAUDE.md  Cargo.toml  build.rs
examples/upper/: CLAUDE.md  Cargo.toml  build.rs
kernel/: CLAUDE.md  Cargo.toml  build.rs  kernel-aarch64.ld  kernel-arm.ld  kernel-loongarch64.ld  kernel-riscv64.ld  kernel.ld  mutants.toml
kernel/proptest-regressions/ipc/: routing_model.txt
kernel/src/: clock.rs  control.rs  elf_flags.rs  lib.rs  loader.rs  log.rs  main.rs
kernel/src/arch/: CLAUDE.md  mod.rs
kernel/src/arch/aarch64/: mod.rs
kernel/src/arch/arm/: CLAUDE.md  context.rs  context_switch.rs  dtb.rs  dwc2.rs  exceptions.rs  fbcon.rs  irq.rs  loadtest.rs  meminit.rs  mmu.rs  mod.rs  page_tables.rs  sched_demo.rs  sched_ipc.rs  sched_shell.rs  sched_spawn.rs  sched_supervisor.rs  sched_user.rs  sdhci.rs  spawn.rs  syscall.rs  timer.rs  usermode.rs  video.rs
kernel/src/arch/loongarch64/: mod.rs
kernel/src/arch/riscv32/: mod.rs
kernel/src/arch/riscv64/: mod.rs
kernel/src/arch/s390x/: mod.rs
kernel/src/arch/x86_64/: CLAUDE.md  ap_boot.rs  boot.rs  context_switch.rs  fb.rs  interrupts.rs  ioapic.rs  iommu.rs  mod.rs  page_tables.rs  pci.rs  rtc.rs  syscall_entry.rs
kernel/src/capability/: CLAUDE.md  cap.rs  delegated.rs  generation.rs  hw_pio.rs  mod.rs  revoke.rs  rights.rs  table.rs
kernel/src/interrupt/: CLAUDE.md  mod.rs  route.rs
kernel/src/invariants/: CLAUDE.md  assertions.rs  mod.rs
kernel/src/ipc/: CLAUDE.md  endpoint.rs  message.rs  mod.rs  names.rs  names_model.rs  queue.rs  routing.rs  routing_model.rs
kernel/src/memory/: CLAUDE.md  allocator.rs  bitmap.rs  frame.rs  mod.rs  ownership.rs  page.rs
kernel/src/smp/: CLAUDE.md  core.rs  ipi.rs  mod.rs  percpu.rs  placement.rs  spinlock.rs
kernel/src/syscall/: CLAUDE.md  dispatch.rs  mod.rs
kernel/src/task/: CLAUDE.md  mod.rs  scheduler.rs  state.rs  task.rs
milestones/: 1_BOOT_VISIBILITY.md  2_MEMORY.md  3_SCHEDULER.md  4_CAPABILITIES.md  5_IPC.md  6_SMP.md  7_SERVICES.md  8_IDENTITY_TESTS.md  9_V1_MILESTONE.md  ALMANAC.md  README.md
milestones/hardware/: iommu-and-dma.md  ring3-bringup.md  userspace-drivers.md
milestones/kernel/: boot.md  interrupt-routing.md  ipc.md  memory.md  scaffold-and-build.md  scheduler.md  services.md
milestones/post_v2/: 2_PERSISTENCE.md  3_FILE_AS_CAPABILITY.md  5_KERNEL_HARDENING.md  6_FAULT_TOLERANCE.md  7_CHAOS_MAX_CARNAGE.md
milestones/resilience/: fault-tolerance.md  kernel-hardening.md
milestones/shell/: shell-and-utilities.md
milestones/storage/: persistence.md
milestones/testing/: chaos.md  code-coverage.md  fuzz-additional.md  fuzz.md  identity-ci.md  identity.md  mutation-testing.md  performance.md  (+2 more)
osdev/: CLAUDE.md  Cargo.toml
osdev/src/: crc32.rs  disk_image.rs  main.rs  qemu.rs  shell_test.rs  validator.rs
scripts/: arch_boundary_check.py  arm_build.py  arm_run.py  contract_check.py  dash_check.py  qemu_iommu.sh  selfcheck.gsh  smoke.gs  smoke.gsh  t630_selfcheck.gs  test_report.py  unsafe_check.py
sdk/: LICENSE
services/: CLAUDE.md  user.ld
services/block-driver/: CLAUDE.md  Cargo.toml  build.rs
services/block-driver/contracts/: block-driver.toml
services/block-driver/src/: ahci.rs  main.rs  sdhci.rs
services/fs/: CLAUDE.md  Cargo.toml  build.rs
services/fs/contracts/: fs.toml
services/fs/src/: crc32.rs  main.rs
services/supervisor/: CLAUDE.md  Cargo.toml
services/supervisor/contracts/: supervisor.toml
services/supervisor/src/: main.rs
tests/: CLAUDE.md  SUMMARY.md
utilities/: 0_conventions.md  10_spawn.md  11_kill.md  12_restart.md  13_reboot.md  14_poweroff.md  15_drives.md  16_ls.md  17_cd.md  18_read.md  19_write.md  1_observe.md  20_mkdir.md  21_copy.md  22_move.md  23_rename.md  24_delete.md  25_find.md  26_tree.md  27_match.md  28_count.md  29_sort.md  2_date.md  30_first-last.md  31_records.md  32_result.md  33_run.md  34_assert.md  35_fcap.md  36_edit.md  37_uptime.md  38_chaos.md  39_fmt.md  3_mem.md  40_net.md  41_sock.md  42_ping.md  43_version.md  44_wait.md  45_whatis.md  (+6 more)
website/: README.md  book.toml  glossary-abbr.py  gs-abbr.css  link-fixup.py  sync.sh
(+171 files in other folders)
