[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kernel"
path = "src/main.rs"
# Do not attempt to compile the no_std binary for cargo test — only the lib
# target (pure-logic modules, host-compiled) is unit-testable.
test = false

[lib]
name = "kernel"
path = "src/lib.rs"

[dependencies]
bitflags = { version = "2", default-features = false }
limine = "0.6"

[dev-dependencies]
# Only used by the lib target (host-compiled, std available).
# The bare-metal bin target has test = false so proptest never touches no_std builds.
proptest = "1"

[profile.dev]
panic = "abort"

[features]
# Build the kernel with a deliberately invalid registry ELF to trigger the TCB
# failure path in init (§6.2, §22 Test 1B).  Only used by `osdev test identity`.
test-bad-registry = []

# Build the kernel in ELF-loader fuzz mode (§22 Fuzz F3).  Calls loader::run_elf_fuzz()
# on 77 malformed ELF byte sequences early in BSP init, prints "fuzz: F3 pass",
# then halts.  Only used by `osdev test fuzz`.
test-bad-elf = []

# Build the kernel in brutal ELF-loader fuzz mode (§22 Fuzz BF3).  Calls
# loader::run_elf_fuzz_brutal() on 263 malformed inputs (13 specific + 200
# random single-byte + 50 multi-byte mutations).  Only used by `osdev test fuzz-brutal`.
test-bad-elf-brutal = []

[profile.release]
panic = "abort"
