[package]
name = "kernel"
version.workspace = true
edition = "2021"

[[bin]]
name = "kernel"
path = "src/main.rs"
# Do not attempt to compile the no_std binary for cargo test - only the lib
# target (pure-logic modules, host-compiled) is unit-testable.
test = false

[lib]
name = "kernel"
path = "src/lib.rs"

[dependencies]
bitflags = { version = "2", default-features = false }
# portable-atomic: AtomicU64 on every target - native (zero-cost) where the ISA has 64-bit atomics
# (x86/x86_64, ARMv7 LDREXD, all 64-bit ISAs), and a lock-based shim on 32-bit RISC-V (RV32A has only
# 32-bit atomics). This is the ONE thing the kernel needed for 32-bit word-size portability.
portable-atomic = { version = "1", default-features = false, features = ["fallback"] }
# Antialiased Noto Sans Mono raster glyphs for the framebuffer console (fb.rs).
# no_std, pure const data (no alloc, no float). Only the Regular weight, one size,
# and Basic-Latin are compiled in to keep the rodata small. Box-drawing glyphs are
# drawn procedurally in fb.rs (the font's Basic-Latin range has no U+2500 block).
noto-sans-mono-bitmap = { version = "0.3", default-features = false, features = ["regular", "size_20", "unicode-basic-latin"] }

# Limine is the x86 boot protocol, used only by arch/x86_64/. Gate it to x86 so the kernel builds for
# the non-x86 arches (aarch64 / riscv64 / loongarch64 / s390x), where Limine does not apply and its
# crate does not even compile (it rejects unsupported target architectures at build time).
[target.'cfg(target_arch = "x86_64")'.dependencies]
limine = "0.6"

[dev-dependencies]
# Only used by the lib target (host-compiled, std available).
# The bare-metal bin target has test = false so proptest never touches no_std builds.
proptest = "1"

[profile.dev]
panic = "abort"

[features]
# Run the minimal ARM logger spawn at boot (arch/arm/spawn.rs). Off by default: the spawn currently
# reaches PL0 and issues real syscalls, but the kernel's cap-table spinlock (LDREX/STREX) does not yet
# work under the service's dual-mapped address space, so the boot would block. Gated so the default
# image boots clean while the spawn is exercised + iterated on with this feature.
arm-spawn-logger = []
# Run the neutral scheduler over 3 cooperative kernel tasks on ARM (arch/arm/sched_demo.rs).
arm-sched-demo = []
# Run a real USER service (the logger) THROUGH the neutral scheduler on ARM, preemptively, alongside
# spinning kernel tasks (arch/arm/sched_user.rs). Proves per-task address spaces + user-mode preemption.
arm-sched-user = []
# Run TWO USER services under the scheduler at once (arch/arm/sched_ipc.rs). Proves the banked-register
# trap frame (SP_usr/LR_usr per task) and is the base the real IPC send/recv proof grows on.
arm-sched-ipc = []
# Spawn a service (logger) through the NEUTRAL spawn path on ARM (arch/arm/sched_spawn.rs). Proves
# task::spawn_service_with_config - the machinery the supervisor's spawn syscall uses - works on ARM.
arm-sched-spawn = []
# The real OS bootstrap: kernel spawns the SUPERVISOR, which spawns the services (arch/arm/sched_supervisor.rs).
arm-supervisor = []
# The interactive shell on ARM: gsh> prompt reading serial input (arch/arm/sched_shell.rs).
arm-shell = []
# Hands-off chaos demo: a few seconds after boot the kernel INJECTS `chaos max-carnage all-services 10`
# (+ confirm) into the input ring, so a serial-output-only setup (no keyboard) still runs + shows the
# storm. Build with `arm-supervisor,arm-autochaos`.
arm-autochaos = []
# Target QEMU's raspi2b emulation rather than real Pi 2 hardware. Currently only changes the DWC2 USB
# DMA bus-address translation: QEMU's emulated DWC2 addresses ARM system RAM directly (identity), while
# real BCM2836 silicon sees RAM through the VideoCore uncached alias 0xC000_0000 (arch/arm/dwc2.rs).
# OFF by default so the shipped image is hardware-correct; scripts/arm_run.py passes it for emulation.
qemu = []

# Deliberately take a data abort during arm32 boot, to PROVE the exception vectors
# fire (a fault path never observed firing is not evidence). The ARM twin of the x86
# adversarial fault tests (§22 A14/A15/C2). Never enabled in a normal boot.
arm-fault-test = []

# Build the kernel with a deliberately invalid SUPERVISOR ELF to trigger the TCB
# failure path when the kernel spawns the supervisor directly (§6.2, §22 Test 1B).
# Only used by `osdev test identity`.
test-bad-supervisor = []

# Build the kernel in ELF-loader fuzz mode (§22 Fuzz F3).  Calls loader::run_elf_fuzz()
# on 77 malformed ELF byte sequences early in BSP init, prints "fuzz: F3 pass",
# then halts.  Only used by `osdev test fuzz`.
test-bad-elf = []

# Build the kernel in brutal ELF-loader fuzz mode (§22 Fuzz BF3).  Calls
# loader::run_elf_fuzz_brutal() on 263 malformed inputs (13 specific + 200
# random single-byte + 50 multi-byte mutations).  Only used by `osdev test fuzz-brutal`.
test-bad-elf-brutal = []

# Confine the first DMA-capable driver (xhci) to an EMPTY IOMMU domain instead of
# its arena, so its normal init DMA faults - a deterministic live proof that the
# IOMMU blocks + logs out-of-arena DMA (§22 Test 12, H1 §6.4). Only used by
# `osdev test iommu` (boots with -device amd-iommu); off in every normal build.
iommu-fault-test = []

[profile.release]
panic = "abort"
