[package]
name = "block-driver"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "block-driver"
path = "src/main.rs"

[dependencies]
godspeed-sdk = { path = "../../sdk/rust" }

[features]
# Read-only hardware probe (osdev image --mode blockprobe): probe BOTH ATA channels
# (primary 0x1F0 + secondary 0x170), read sector 0, report what's found. Never issues
# WRITE SECTORS — disk media is untouched. Used to discover whether the T630 exposes a
# disk via legacy IDE, and on which channel, before any write test.
hw-probe = []
# AHCI (SATA) backend instead of ATA PIO (docs/ahci.md). The modern-hardware path
# (the T630's SSD is AHCI-only). Develops against QEMU q35/ich9-ahci; will become
# the default once read/write/fs/reboot are verified on it, retiring ATA PIO.
ahci = []
