[package]
name = "block-driver"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "block-driver"
path = "src/main.rs"

[features]
# Force the first couple of read/write commands to fail, to exercise the bounded I/O
# retry + port-recovery path (Phase H) — QEMU never fails a real disk read. TEST BUILDS
# ONLY; production never injects faults. Enabled by `osdev test fs-ioretry`.
io-error-test = []

[dependencies]
godspeed-sdk = { path = "../../sdk/rust" }
