[package]
name = "fs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fs"
path = "src/main.rs"

[features]
# Run the mount-time self-test (writes /greeting + /etc/motd to verify the hierarchy
# and reboot survival). TEST BUILDS ONLY — it writes to the disk, so it must never be
# enabled in a production/bare-metal build where the disk is the user's. Enabled by
# `osdev test blockdev`/`blockdev-reboot`; absent from `osdev image`.
selftest = []

# Crash-consistency proof. Runs `journal_crash_test` at mount: writes a file through a
# transaction that halts right after the commit record is durable (simulated power loss),
# so the next boot must recover it from the journal. TEST BUILDS ONLY (it writes to the
# disk and deliberately hangs the service). Enabled by `osdev test fs-journal`.
journal-crash-test = []

# Extent-list / fragmentation proof (GSFS0007). Runs `frag_test` at mount: fills the disk
# with small files, deletes every other one to scatter free space into small gaps, then
# writes a multi-block file that CANNOT fit contiguously — forcing the fragmented
# (`ITYPE_FILE_FRAG`) path — and verifies the read-back (and across a reboot). TEST BUILDS
# ONLY (it writes to the disk). Enabled by `osdev test fs-frag`.
frag-test = []

[dependencies]
godspeed-sdk = { path = "../../sdk/rust" }
