[package]
name = "supervisor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "supervisor"
path = "src/main.rs"

[features]
# Spawn only the 15 identity-test probe services; skip property/fuzz/stress/perf/
# adversarial/chaos probes.  Used by `osdev test identity` to keep the supervisor
# spawn loop under 10 s on TCG so WithRestart tests have plenty of deadline margin.
# Spawn only pong + ping — no probe services at all.  Used by `osdev image`
# (bare-metal USB) so core 0 is not loaded with harness-driven probes that
# require the QEMU control port to complete (e.g. probe-4b, probe-hog).
bare-metal = []
identity-only = []
# Spawn only the regular performance-benchmark probe services (perf-b1…perf-b10
# and their echo/victim partners).  Used by `osdev test perf` to eliminate the
# 160+ non-perf probe spawn-wait, giving each benchmark maximum headroom before
# its timeout fires.  Does not include brutal perf probes (bp*).
perf-only = []
# Spawn only the brutal performance-benchmark probe services (perf-bp1…perf-bp10
# and their echo/victim partners).  Used by `osdev test perf-brutal`.
perf-brutal-only = []
# Spawn only the S1–S10 stress probe services (and pong/ping).
# Used by `osdev image --mode stress` for a self-contained hardware stress run.
stress-only = []
# Spawn only the A1–A10 adversarial probe services (and pong/ping).
# Used by `osdev image --mode adv` for a self-contained hardware adversarial run.
adv-only = []
# Spawn only the C2–C7 chaos probe services (and pong/ping).
# C1 uses bare-metal + BIOS core disable; C4 uses bare-metal + RAM removal.
# Used by `osdev image --mode chaos` for a self-contained hardware chaos run.
chaos-only = []
# Spawn only perf-b2 + perf-b2-echo (and pong/ping).
# Isolation build: eliminates concurrent IPI noise from other benchmarks so
# the cross-core blocking round-trip can complete without IPI contention.
# Used by `osdev image --mode b2-only`.
b2-only = []
# Spawn only perf-bp2 + perf-bp2-echo (and pong/ping).
# Brutal-isolation equivalent of b2-only at higher iteration count.
# Used by `osdev image --mode bp2-only`.
bp2-only = []
# Spawn only observe — no pong, no ping, no probe services.
# Used by `osdev image --mode s8` for the S8 24-hour idle stability run:
# kernel idles on all cores; observe reports system state every ~500 yields.
idle-only = []
# perf-iso: per-probe isolation builds for clean, uncontended T630 latency.
# `perf-iso` is the umbrella (no ping/pong, no other probes); each `iso-bpN`
# sub-feature pulls it in and selects exactly one brutal perf probe (+ partners).
# bp5 covers BP5 (spawn) and BP6 (restart) — same probe. Used by
# `osdev image --mode iso-bp{3,5,7,9,10}`.
# perf-iso is the generic single-probe isolation umbrella (no ping/pong, no other
# probes). iso-s3/iso-s9 reuse it to isolate the cross-core STRESS tests (S3
# thrash, S9 IPI storm) — pass/fail robustness runs without the restart-churn
# probes (S2/S4/S10). Used by `osdev image --mode iso-s{3,9}`.
perf-iso = []
iso-bp3  = ["perf-iso"]
iso-bp5  = ["perf-iso"]
iso-bp7  = ["perf-iso"]
iso-bp9  = ["perf-iso"]
iso-bp10 = ["perf-iso"]
iso-s3   = ["perf-iso"]
iso-s9   = ["perf-iso"]

[dependencies]
godspeed-sdk = { path = "../../sdk/rust" }
